--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 
 %% Run LaTeX on this file several times to get Table of Contents,
 \input{book_command}
+%\includeonly{week3/Tuesday}
 \includeonly{week3/Thursday}
 \begin{document}
 %Hello
